objects/NCS_Data_Entry_Relationship_Type_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Default_From__c</fullName>
        <label>Default From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_To__c</fullName>
        <inlineHelpText>This is the actual &apos;name&apos; value on the SF Relationship Type we want to relate to.</inlineHelpText>
        <label>Default To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NCS Data Entry Relationship Type Setting</label>
</CustomObject>